--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         </div>
 
         <div class="days">
-            <!-- <div class="day">
+             <div class="day">
                 <div>03/01</div>
                 <input type="checkbox" name="run" />
                 <input type="checkbox" name="water" />
                 <input type="checkbox" name="food" />
             </div>
-
+            <!--
             <div class="day">
                 <div>04/01</div>
                 <input type="checkbox" name="run" />
